--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="chat-history-div border mb-4 px-3 py-1 pt-3" #chatHistoryDiv>
       <div *ngFor="let messages of allMessages">
-        <p><span class="anonymous">Anonymous : </span> {{messages.message }}</p>
+        <p><span class="anonymous1">Anonymous : </span> {{messages.message }}</p>
       </div>
     </div>
     <div class="send-div d-flex justify-content-end align-items-center">
