--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section class="chat-window-section p-4">
-  <div class="chat-window-div container">
+  <div class="chat-window-div container position-relative">
     <div class="heading-div mt-2 mb-4">
       <h3 class="text-primary">Connect Hub</h3>
       <p class="developedBy">Designed and Developed by Praveen</p>
@@ -9,11 +9,15 @@
         <p><span class="anonymous1">Anonymous : </span> {{messages.message }}</p>
       </div>
     </div>
+    <p class="d-flex justify-content-center spinner-p m-0" *ngIf="spinnerToggle"><i class="fa fa-spinner fa-spin"></i></p>
+    <div class="position-absolute emojis-div">
+      <emoji-mart *ngIf="showEmojiMenu" title="Pick your emoji…" emoji="point_up" (emojiClick)="addEmoji($event)"></emoji-mart>
+    </div>
     <div class="send-div d-flex justify-content-end align-items-center">
       <form [formGroup]="messageForm" class="w-100">
         <div class="d-flex justify-content-end align-items-start">
           <div class="w-100 d-flex flex-column">
-            <input class="message-input-box w-100 px-2 py-1" type="text" formControlName="message" [ngClass]="{ 'is-invalid': submitted && messageForm.get('message')?.invalid }" placeholder="Message">
+            <input class="message-input-box w-100 px-2 py-1" type="text" formControlName="message" [ngClass]="{ 'is-invalid': submitted && messageForm.get('message')?.invalid }" placeholder="Message" (emojiSelected)="addEmoji($event)" [(ngModel)]="emojiSet" (keydown.enter)="sendMessageOnEnter()">
             <!-- <div *ngIf="submitted && messageForm.get('message')?.invalid" class="invalid-feedback">
               <div *ngIf="submitted && messageForm.get('message')?.hasError('required')">
                 <span class="text-success">Type something...</span>
@@ -21,8 +25,9 @@
             </div> -->
           </div>
           <div class="d-flex justify-content-end align-items-center">
-            <button class="btn btn-info text-white mx-2 py-1 px-2" (click)="SendMesage()"><i class="fa-solid fa-paper-plane"></i></button>
-            <button class="refresh-button btn btn-outline-info py-1 px-2" (click)="receiveMessage()"><i class="fa-solid fa-arrows-rotate"></i></button>
+            <button class="refresh-button btn btn-outline-primary ms-2 py-1 px-2" (click)="receiveMessage()"><i class="fa-solid fa-arrows-rotate"></i></button>
+            <button class="btn btn-outline-primary mx-2 py-1 px-2" (click)="selectEmoji()"><i class="fa-regular fa-face-smile"></i></button>
+            <button class="btn btn-primary text-white py-1 px-2" (click)="SendMesage()"><i class="fa-solid fa-paper-plane"></i></button>
           </div>
         </div>
       </form>
