--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@ctrl/ngx-emoji-mart/picker';
+body{
+  background-color: #f5f8f8;
+}
