--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,5 +42,5 @@
     </div>
   </div>
 </section>
-<p class="developedBy text-nowrap">Designed and Developed by <span class="text-primary">Praveen</span></p>
+<p class="developedBy text-nowrap">Designed and Developed by <span class="text-primary fw-medium">Praveen</span></p>
 <router-outlet></router-outlet>
